[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/ui/logos/twitter.png" type="Texture" id=1]
[ext_resource path="res://assets/shader/material/erase.tres" type="Material" id=2]
[ext_resource path="res://src/eastereggs/EasterEggGame.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/deathguy_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/player/body/body01.png" type="Texture" id=5]
[ext_resource path="res://src/screen/main_screen.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/logos/github.png" type="Texture" id=7]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/shader/material/glitch.tres" type="Material" id=11]
[ext_resource path="res://src/eastereggs/ee_message.gd" type="Script" id=12]
[ext_resource path="res://src/screen/TutorialConfirmation.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/fonts/DeathGuyFont.otf" type="DynamicFontData" id=14]
[ext_resource path="res://src/escape_env.tres" type="Environment" id=15]
[ext_resource path="res://src/eastereggs/EasterEggDialog.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/screen/SettingsScreen.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/screen/CreditsScreen.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/sfx/easter_egg.wav" type="AudioStream" id=19]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/background01.png-df71d024805860b8f5c6e1383731c9ab.stex"

[sub_resource type="DynamicFont" id=2]
size = 144
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -9
extra_spacing_char = 8
font_data = ExtResource( 14 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/head01.png-e283c53691c3bde7550f3e4099cd8978.stex"

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/myket.png-4bdfbf8ccb5f1fcc74182a61ce10fcd7.stex"

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/virasty.png-a75e9bd0c8e1b2259f8d074614315944.stex"

[sub_resource type="DynamicFont" id=8]
size = 144
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -9
extra_spacing_char = 8
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=9]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0, -110 ), Vector2( 0, 160 ), Vector2( 0, 110 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button/PlayButton:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( -340, 610 ), Vector2( 210, 610 ), Vector2( 160, 610 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Button/CustomizeButton:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 720, 722 ), Vector2( 110, 722 ), Vector2( 160, 722 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Button/SettingsButton:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( -400, 834 ), Vector2( 210, 834 ), Vector2( 160, 834 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Button/CreditsButton:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 720, 946 ), Vector2( 110, 946 ), Vector2( 160, 946 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Button2/virasty:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 479, 14 ), Vector2( 479, 14 ), Vector2( 479, -38 ), Vector2( 479, 14 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Button2/GitHub:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 329, 14 ), Vector2( 329, 14 ), Vector2( 329, -38 ), Vector2( 329, 14 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Button2/Twitter:rect_position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 179, 14 ), Vector2( 179, 14 ), Vector2( 179, -38 ), Vector2( 179, 14 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Button2/Myket:rect_position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 0.5, 2 ),
"update": 0,
"values": [ Vector2( 29, 14 ), Vector2( 29, 14 ), Vector2( 32, -38 ), Vector2( 29, 14 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprites:material:shader_param/progress")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.7, 1.9 ),
"transitions": PoolRealArray( 1, 1, 2 ),
"update": 0,
"values": [ 1.2, 1.2, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Glitch:material:shader_param/apply")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprites/EasterEgg:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sprites/Body:region_rect")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Sprites/Head:region_rect")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -110 ) ]
}

[sub_resource type="Animation" id=11]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EasterEggMessage:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 722, 590 ), Vector2( 722, 590 ), Vector2( -1120, 590 ) ]
}

[sub_resource type="Animation" id=12]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=13]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Glitch:material:shader_param/apply")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 64, 64 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 192, 64, 64 ), Rect2( 64, 192, 64, 64 ), Rect2( 128, 192, 64, 64 ), Rect2( 192, 192, 64, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Head:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 192, 64, 64 ), Rect2( 64, 192, 64, 64 ), Rect2( 128, 192, 64, 64 ), Rect2( 192, 192, 64, 64 ) ]
}

[node name="MainScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 640.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 360.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -733.0
margin_right = -953.0
margin_bottom = -780.0
rect_scale = Vector2( 4, 4 )
mouse_filter = 2
texture = SubResource( 1 )
expand = true
stretch_mode = 6

[node name="EasterEggGame" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = -110.0
margin_right = 720.0
margin_bottom = 26.0
rect_min_size = Vector2( 720, 0 )
custom_fonts/font = SubResource( 2 )
text = "ESCAPE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Control" parent="."]
material = ExtResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -316.0
margin_right = 128.0
rect_min_size = Vector2( 256, 256 )
mouse_filter = 2

[node name="Body" type="Sprite" parent="Sprites"]
use_parent_material = true
position = Vector2( 128, 158 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )
__meta__ = {
"_editor_description_": ""
}

[node name="Head" type="Sprite" parent="Sprites"]
use_parent_material = true
position = Vector2( 128, 158 )
scale = Vector2( 4, 4 )
texture = SubResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )
__meta__ = {
"_editor_description_": ""
}

[node name="EasterEgg" type="Button" parent="Sprites"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PlayButton" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -30.0
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 400, 100 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomizeButton" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 82.0
margin_right = 200.0
margin_bottom = 182.0
rect_min_size = Vector2( 400, 100 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "Customize"

[node name="SettingsButton" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 194.0
margin_right = 200.0
margin_bottom = 294.0
rect_min_size = Vector2( 400, 100 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "Settings"

[node name="CreditsButton" type="Button" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 306.0
margin_right = 200.0
margin_bottom = 406.0
rect_min_size = Vector2( 400, 100 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "About"

[node name="Button2" type="Button" parent="."]
margin_left = 56.0
margin_top = 1120.0
margin_right = 664.0
margin_bottom = 1248.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Myket" type="TextureButton" parent="Button2"]
margin_left = 29.0
margin_top = 14.0
margin_right = 128.998
margin_bottom = 114.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
texture_normal = SubResource( 6 )
expand = true

[node name="Twitter" type="TextureButton" parent="Button2"]
margin_left = 179.0
margin_top = 14.0
margin_right = 279.0
margin_bottom = 114.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="GitHub" type="TextureButton" parent="Button2"]
margin_left = 329.0
margin_top = 14.0
margin_right = 429.0
margin_bottom = 114.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
expand = true

[node name="virasty" type="TextureButton" parent="Button2"]
margin_left = 479.0
margin_top = 14.0
margin_right = 579.0
margin_bottom = 114.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
texture_normal = SubResource( 7 )
expand = true
stretch_mode = 6

[node name="Glitch" type="ColorRect" parent="."]
material = ExtResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="EasterEggMessage" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 362.0
margin_top = -50.0
margin_right = 1480.0
margin_bottom = 87.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "   Escape
     The
OBSTACLES"
text = "   Escape
     The
OBSTACLES"
fit_content_height = true
scroll_active = false
script = ExtResource( 12 )

[node name="EasterEggDialog" parent="." instance=ExtResource( 16 )]

[node name="TutorialConfirmation" parent="." instance=ExtResource( 13 )]

[node name="SettingsScreen" parent="." instance=ExtResource( 17 )]
visible = false

[node name="CreditsScreen" parent="." instance=ExtResource( 18 )]

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="EasterEggSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ENTER"
anims/ENTER = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/easteregg = SubResource( 11 )
anims/easteregg2 = SubResource( 12 )
anims/exit = SubResource( 13 )
anims/reset_sprite = SubResource( 14 )
anims/sprite_unique = SubResource( 15 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 15 )
[connection signal="pressed" from="Sprites/EasterEgg" to="." method="_on_EasterEgg_pressed"]
[connection signal="pressed" from="Button/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Button/CustomizeButton" to="." method="_on_CustomizeButton_pressed"]
[connection signal="pressed" from="Button/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Button/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Button2/Myket" to="." method="_on_Myket_pressed"]
[connection signal="pressed" from="Button2/Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="pressed" from="Button2/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="Button2/virasty" to="." method="_on_virasty_pressed"]
[connection signal="confirmed" from="TutorialConfirmation" to="." method="_on_TutorialConfirmation_confirmed"]
